--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -7,6 +7,7 @@ header {
     width: 100%;
     backdrop-filter: blur(10px);
     padding: 1rem 1.5rem;
+    z-index: 1;
 }
 
 header .logo {
